<resources>
    <string name="app_name">Smart Panel</string>
    <string name="ic_desc">icon</string>
    <string name="empty"> </string>
    <string name="msg_not_wifi_connection">No WiFi connection</string>
    <string name="weather_xml">http://informer.gismeteo.ru/xml/34300_1.xml</string>
    <string name="root_debug">http://192.168.1.2/Projects/SmartPanel/</string>
    <string name="root">file:///android_asset/</string>
    <string name="ip">IP • </string>

    <string name="msg_exit">Press once again to exit!</string>
    <string name="msg_unsupported">Unsupported Command</string>
    <string name="msg_app_not_installed">Application not Installed</string>
    <string name="pkg_app">com.jsc.smartpanel</string>
    <string name="pkg_main">main</string>
    <string name="pkg_radio">air.InternetRadio</string>
    <string name="pkg_sling_player">air.SlingPlayerTablet3.A4</string>
    <string name="app_entry">.AppEntry</string>
    <string name="pkg_wifi_scanner">com.pinapps.amped</string>
    <string name="scanner_activity1">.Main</string>

    <string name="pref_title_general">NODE MCU CONTROLERS DATA</string>
    <!--    JSC-ESP8266-SH | Bathroom |	Channel ID:	135846 -->
    <string name="def_node_weather_url">http://192.168.1.199</string>
    <string name="def_node_weather_chip">772471</string>
    <!--    JSC-ESP8266-SH | Bathroom |	Channel ID:117345 -->
    <string name="def_node_bathroom_url">http://192.168.1.77</string>
    <string name="def_node_bathroom_chip">2334292</string>

    <!--    HTML URL  ================== -->
    <string name="html_weather">weather.html</string>
    <string name="html_timer">timer.html</string>
    <string name="html_smarthome">smarthome.html</string>
    <string name="html_stats">smarthome/statistic.html</string>

   <!--     debug url ================== -->
    <string name="debug_js_interface">http://192.168.1.2/Projects/SmartPanel/HTML5UI/src/main.html</string>
    <string name="smart_home_url">http://192.168.1.2/SmartHome/smart_home.html</string>
    <string name="smart_home_url2">http://192.168.1.2/Projects/HTML5UI/src/main.html</string>

<!--    <string name="debug_url">http://192.168.1.2/Projects/SmartPanel/weather/src/index.html</string>-->
    <!--<string name="debug_url">http:\\192.168.1.2\/ww\/src\/main.html</string>-->
    <!--<string name="debug_url">http:\\192.168.1.2\/SmartHome\/mainWRD.html</string>-->
    <!--<string name="debug_url">http:\\192.168.1.2\/wl\/src\/main.html</string>-->
    <!--<string name="debug_url">http://winecard.ltd.ua/Debug/rfc/</string>-->
    <!--    <string name="dummy_content">DUMMY\nCONTENT</string>-->
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- main header-->
    <string name="pref_header_general">General Preferences</string>
    <string name="pref_summary_general">Basic Parameters for Application</string>
    <string name="pref_header_advanced">Advanced Preferences</string>
    <string name="pref_summary_advanced">Developer Advanced Preferences</string>
    <string name="pref_header_schedule">Schedule</string>
    <string name="pref_summary_schedule">Swap Screens Frequency</string>
    <string name="pref_header_about">About</string>
    <string name="pref_summary_about">Information the Android Application</string>
    <!-- ==================== -->


    <!-- string settings general -->
    <string name="pref_group_title_general">SMART HOME CONTROLERS OPTIONS</string>
    <string name="pref_title_ip_weather">IP Controller of the Weather Station and Smart Home</string>
    <string name="pref_title_chip_weather">Chip ID Smart Home Controller</string>
    <string name="pref_title_ip_bathroom">IP of the Bathroom Controller</string>
    <string name="pref_title_chip_bathroom">Chip ID Bathroom Controller</string>

    <!-- ==================== -->

    <!-- string settings advanced -->
    <string name="pref_group_title_remote">REMOTE CONTROL OPTIONS</string>
    <string name="pref_title_port">Server Port for Remote Control</string>
    <string name="pref_title_reset">Reset Default Preferences</string>
    <string name="pref_title_desc">For the changes to take effect return to application</string>
    <string name="pref_group_title_develop">DEVELOPER OPTIONS</string>
    <string name="pref_title_debug_mode">Debug Mode</string>
    <string name="pref_title_clear_cache">Clear Cache</string>
    <!-- ==================== -->

    <!-- string settings schedule -->
    <string name="pref_group_title_schedule">SMART PANEL BEHAVIOR</string>
    <string name="pref_schedule_auto_title">Night Mode"</string>
    <string name="pref_schedule_auto_desc">Auto Start Night Mode On/OFF"</string>
    <string name="pref_schedule_backlight_title">Auto Set Backlight Screen"</string>
    <string name="pref_schedule_backlight_desc">Auto Set Backlight Low in Night Mode"</string>

    <string name="pref_schedule_day_title">Start Day Mode"</string>
    <string name="pref_schedule_day_desc">Day Profile Start Time"</string>
    <string name="pref_schedule_night_title">Start Night Mode"</string>
    <string name="pref_schedule_night_desc">Night Profile Start Time"</string>
    <string name="pref_schedule_swap_title">Auto Swap Screens</string>
    <string name="pref_schedule_swap_desc">Periodic Change of Screens</string>
    <string name="pref_schedule_swap_freq">Swap Screens Frequency</string>

    <string name="pref_schedule_def_start_day">6</string>
    <string name="pref_schedule_def_start_night">21</string>
    <string name="pref_schedule_def_frequency">2</string>
    <string name="pref_schedule_def_frequency_str">1 min</string>
    <string-array name="pref_schedule_frequency_titles">
        <item>2 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
    </string-array>
    <string-array name="pref_schedule_frequency_values">
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>

    </string-array>
    <!-- ==================== -->

    <!-- string settings about -->
    <string name="about_app_title">Smart Panel</string>
    <string name="version">Version</string>
    <string name="about_ip_title">IP Address Smart Panel</string>
    <string name="about_desc">Application for the \nAndroid mobile platform"</string>
    <string name="about_copyright">© 2019 • 2020 Jeneral Samopal Company \nDesign and Programming by Alex Dovby</string>
    <!-- ==================== -->

    <!--    debug panel -->
    <string name="label_response">Response</string>
    <string name="label_response_error">Response Error</string>
    <string name="label_name">       CMD      ADRESS  PACKAGE         CRC    </string>
    <string name="label_bytes_null">00 00 00 00 00 00 00 00</string>
    <string name="msg_not_support_cmd">Not support command</string>
</resources>
