<!--
  ~ Copyright (c) 2019.
  ~ RF Controls
  ~ Design and Programming by Alex Dovby
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
<!--    <PreferenceCategory android:title="@string/pref_group_title_schedule" />-->
    <PreferenceCategory android:title="@string/empty">

    </PreferenceCategory>
    <Preference
        android:icon="@drawable/ic_grp_schedule"
        android:title="@string/pref_group_title_schedule" />
    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_night_mode"
        android:key="sw_auto_start"
        android:summary="@string/pref_schedule_auto_desc"
        android:title="@string/pref_schedule_auto_title" />
    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_light"
        android:key="sw_back_light"
        android:summary="@string/pref_schedule_backlight_desc"
        android:title="@string/pref_schedule_backlight_title" />
    <EditTextPreference
        android:icon="@drawable/ic_day"
        android:inputType="numberDecimal"
        android:key="start_day"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/pref_schedule_day_desc"
        android:title="@string/pref_schedule_day_title"
        app:defaultValue="@string/pref_schedule_def_start_day" />
    <EditTextPreference
        android:icon="@drawable/ic_night"
        android:inputType="numberDecimal"
        android:key="start_night"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/pref_schedule_night_desc"
        android:title="@string/pref_schedule_night_title"
        app:defaultValue="@string/pref_schedule_def_start_night" />
    <SwitchPreference
        android:defaultValue="true"
        android:icon="@drawable/ic_swap"
        android:key="sw_swap"
        android:summary="@string/pref_schedule_swap_desc"
        android:title="@string/pref_schedule_swap_title" />
    <ListPreference
        android:defaultValue="false"
        android:dependency="sw_swap"
        android:entries="@array/pref_schedule_frequency_titles"
        android:entryValues="@array/pref_schedule_frequency_values"
        android:icon="@drawable/ic_freq"
        android:key="swap_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/pref_schedule_def_frequency_str"
        android:title="@string/pref_schedule_swap_freq" />

</PreferenceScreen>
