<!--
  ~ Copyright (c) 2020.
  ~ Jeneral Samopal Company
  ~ Design and Programming by Alex Dovby
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:icon="@drawable/ic_grp_smart_home"
        android:selectable="false"
        android:shouldDisableView="false"
        android:title="@string/pref_group_title_general" />
    <EditTextPreference
        android:defaultValue="@string/def_node_weather_url"
        android:icon="@drawable/ic_esp"
        android:inputType="textCapWords"
        android:key="ip_weather"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_ip_weather" />
    <EditTextPreference
        android:defaultValue="@string/def_node_weather_chip"
        android:icon="@drawable/ic_chip"
        android:inputType="textCapWords"
        android:key="chip_weather"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_chip_weather" />
    <EditTextPreference
        android:defaultValue="@string/def_node_bathroom_url"
        android:icon="@drawable/ic_esp"
        android:inputType="textCapWords"
        android:key="ip_bathroom"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_ip_bathroom" />
    <EditTextPreference
        android:defaultValue="@string/def_node_bathroom_chip"
        android:icon="@drawable/ic_chip"
        android:inputType="textCapWords"
        android:key="chip_bathroom"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_chip_bathroom" />

    <Preference
        android:icon="@drawable/ic_grp_remote"
        android:selectable="false"
        android:shouldDisableView="false"
        android:title="@string/pref_group_title_remote" />
    <Preference
        android:icon="@drawable/ic_server"
        android:key="device_ip"
        android:selectable="false"
        android:summary="@string/def_node_bathroom_url"
        android:title="@string/about_ip_title" />

</PreferenceScreen>
